we have bars, scratchpad, stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -365,12 +365,38 @@ gestures {
     workspace_swipe_cancel_ratio = 0.1
 }
 
-plugin:touch_gestures {
-    sensitivity = 5.0
-    long_press_delay = 500
-    # must be >= 3
-    workspace_swipe_fingers = 4
-    experimental {
-        send_cancel = 0
+plugin {
+    hyprbars {
+        bar_height = 30
+        bar_color = rgba($color1455)
+        bar_precedence_over_border = 1
+        bar_part_of_window = 1
+        # bar_color -> (col) bar's background color
+        # bar_height -> (int) bar's height (default 15)
+        # col.text -> (col) bar's title text color
+        # bar_title_enabled -> (bool) whether to render the title (default true)
+        # bar_text_size -> (int) bar's title text font size (default 10)
+        # bar_text_font -> (str) bar's title text font (default Sans)
+        # bar_text_align -> (str) bar's title text alignment (default center, can also be left)
+        # bar_buttons_alignment -> (str) bar's buttons alignment (default: right, can also be left)
+        # bar_part_of_window -> (bool) whether the bar is a part of the main window (if it is, stuff like shadows render around it)
+        # bar_precedence_over_border -> (bool) whether the bar should have a higher priority than the border (border will be around the bar)
+        # bar_padding -> (int) left / right edge padding (default 7)
+        # bar_button_padding -> (int) padding between the buttons (default 5)
+
+        # example buttons (R -> L)
+        # hyprbars-button = color, size, on-click
+        hyprbars-button = rgb(FF0000), 20, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(FFFF00), 20, O, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(00FF00), 20, -, hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
+    }
+    touch_gestures {
+        sensitivity = 5.0
+        long_press_delay = 500
+        # must be >= 3
+        workspace_swipe_fingers = 4
+        experimental {
+            send_cancel = 0
+        }
     }
 }
