hyprland plugins now working

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,6 +33,7 @@ monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor =, preferred,auto,auto
 
 # STARTUP
+exec-once = ~/.config/scripts/hyprland-plugin-script.sh
 exec-once = hyprpm reload -n
 exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
 exec-once = waybar
