pywal -> wallust, only hyprland template

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 ## Yukna config ##
 ##################
 
-source = ~/.cache/wal/colors-hyprland.conf
+source = ./colors.conf
 # GLOBAL VARIABLES
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
@@ -79,8 +79,8 @@ input {
 }
 
 decoration {
-    rounding = 0
     drop_shadow = false
+    rounding = 0
     shadow_range = 10
     shadow_render_power = 2
     col.shadow = rgba($color13ee)
@@ -113,6 +113,7 @@ misc {
     # force_hypr_chan = true
     enable_swallow = false
     swallow_regex = ^(kitty)$
+    vfr = true
 }
 
 general {
