--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 # vim:ft=hyprlang
 
-source = ~/.cache/wal/colors-hyprland.conf
+source = ./colors.conf
 input-field {
     monitor =
     size = 1200, 100
