--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -6,12 +6,23 @@ general {
 }
 
 listener {
-  timeout = 240
-  on-timeout = loginctl lock-session
+    timeout = 150
+    on-timeout = light -O && light -s 10
+    on-resume = light -I
 }
 
 listener {
   timeout = 300
+  on-timeout = loginctl lock-session
+}
+
+listener {
+  timeout = 600
   on-timeout = hyprctl dispatch dpms off
   on-resume = hyprctl dispatch dpms on
+}
+
+listener {
+  timeout = 900
+  on-timeout = systemctl hibernate
 }
