--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -2,24 +2,24 @@
 $wallpaper="/home/yukna/Pictures/Wallpaper/cropped-image.jpg"
 
 # Special
-$cursor=B2ABAC
-$background=020B09
-$foreground=B2ABAC
+$cursor=E0E1DE
+$background=0D0807
+$foreground=E0E1DE
 
 # Colors
-$color0=222110
-$color1=156975
-$color2=751415
-$color3=1B4A98
-$color4=AD1E72
-$color5=2456CC
-$color6=246CCC
-$color7=887F81
-$color8=5F585A
-$color9=16677E
-$color10=791515
-$color11=1F55AD
-$color12=CC2383
-$color13=2F5FDA
-$color14=4084DD
-$color15=887F81
+$color0=100A09
+$color1=478394
+$color2=498997
+$color3=83743F
+$color4=4E5EA2
+$color5=5A95AF
+$color6=A54F94
+$color7=CBCCC7
+$color8=8E8E8B
+$color9=539AAC
+$color10=6EAAB9
+$color11=AE9C56
+$color12=5A6AAF
+$color13=98BDCD
+$color14=C383B8
+$color15=CBCCC7
