--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,9 +9,9 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgba($color14ee)
-    inner_color = rgba($foregroundee)
-    font_color = rgba($foreground)
+    outer_color = $color14
+    inner_color = $foreground
+    font_color = $foreground
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
@@ -36,7 +36,7 @@ label {
     monitor =
     text = Hi there, $USER
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = rgba($foregroundee)
+    color = $foreground
     font_size = 96
     font_family = Noto Sans
     rotate = 0 # degrees, counter-clockwise
