idling and lockscreen all working with themes

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -48,7 +48,8 @@ label {
 
 background {
     monitor =
-    path = $wallpaper
+    #path = $wallpaper
+    color = $background
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 0 # 0 disables blurring
