--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -81,7 +81,7 @@ alpha = 100
 [templates]
 hyprland = { template = 'templates/hyprland', target = '~/.config/hypr/colors.conf' }
 waybar = { template = 'templates/colors-waybar.css', target = '~/.config/waybar/colors-waybar.css', new_engine = true }
-zathura = { template = 'templates/zathura', target = '~/.config/zathura/zathura-color' }
+zathura = { template = 'templates/zathura', target = '~/.config/zathura/zathura-color', new_engine = true }
 #dunst = { template = 'dunstconfig', target = '~/.config/dunst/dunstrc', new_engine = true }
 
 
