fixed weird notification bug, switched to kitty

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ source = ./colors.conf
 # GLOBAL VARIABLES
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
-$term = foot
+$term = kitty
 $filebrowser = thunar
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
@@ -33,8 +33,8 @@ monitor = eDP-1, 3000x2000@60, 0x0, 2
 monitor =, preferred,auto,auto
 
 # STARTUP
-exec-once = bash ~/.config/hypr/capture_env.sh
-exec-once = wbg ~/Pictures/Wallpaper/cropped-image.jpg
+exec-once = bash ~/.config/scripts/hyprland-plugin-script.sh
+exec-once = wbg $wallpaper
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = dunst
@@ -111,8 +111,8 @@ master {
 misc {
     disable_hyprland_logo = true
     # force_hypr_chan = true
-    enable_swallow = false
-    swallow_regex = ^(kitty)$
+    # enable_swallow = false
+    # swallow_regex = ^(kitty)$
     vfr = true
 }
 
