--- a/.config/zsh/oh-my-posh-config.json
+++ b/.config/zsh/oh-my-posh-config.json
@@ -199,7 +199,7 @@
       "type": "prompt"
     }
   ],
-  "osc99": true,
+  "osc99": false,
   "transient_prompt": {
     "background": "transparent",
     "foreground": "#FEF5ED",
