--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -368,7 +368,7 @@ gestures {
 plugin {
     hyprbars {
         bar_height = 30
-        bar_color = rgba($color1455)
+        bar_color = rgba($color14AA)
         bar_precedence_over_border = 1
         bar_part_of_window = 1
         # bar_color -> (col) bar's background color
@@ -386,9 +386,9 @@ plugin {
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(FF0000), 20, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(FFFF00), 20, O, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(00FF00), 20, -, hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
+        hyprbars-button = rgb($color3), 20, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb($color3), 20, , hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb($color3), 20, , hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
     }
     touch_gestures {
         sensitivity = 5.0
