--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -79,10 +79,12 @@ saturation = 35
 alpha = 100
 
 [templates]
-hyprland = { template = 'templates/hyprland', target = '~/.config/hypr/colors.conf' }
+hyprland = { template = 'templates/hyprland.conf', target = '~/.config/hypr/colors.conf' }
 waybar = { template = 'templates/colors-waybar.css', target = '~/.config/waybar/colors-waybar.css', new_engine = true }
 zathura = { template = 'templates/zathura', target = '~/.config/zathura/zathura-color', new_engine = true }
-#dunst = { template = 'dunstconfig', target = '~/.config/dunst/dunstrc', new_engine = true }
+dunst = { template = 'template/dunst', target = '~/.config/dunst/dunst-color', new_engine = true }
+kitty = { template = 'template/kitty.conf', target = '~/.config/kitty/current-theme.conf' }
+wofi = { template = 'template/colors-waybar.css', target = '~/.config/wofi/colors.css' }
 
 
 # REMINDER Variables and methods that can be used with templating:
