wal_update now works with optional pallette changing

--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -2,24 +2,24 @@
 $wallpaper="/home/yukna/Pictures/Wallpaper/cropped-image.png"
 
 # Special
-$cursor=EDDCE0
-$background=0E0907
-$foreground=EDDCE0
+$cursor=F7D9C8
+$background=080501
+$foreground=F7D9C8
 
 # Colors
-$color0=110B09
-$color1=4B829B
-$color2=477F94
-$color3=8D7D44
-$color4=4E5BA2
-$color5=A54F86
-$color6=5D9AB1
-$color7=DDC5CB
-$color8=9A898E
-$color9=5D99B1
-$color10=5394AC
-$color11=AE9956
-$color12=5A68AF
-$color13=C383AC
-$color14=9BC1CF
-$color15=DDC5CB
+$color0=0A0602
+$color1=6E4035
+$color2=83623F
+$color3=945B47
+$color4=A95F51
+$color5=977249
+$color6=A97151
+$color7=ECC1A9
+$color8=A58776
+$color9=7C483C
+$color10=976D49
+$color11=A2654E
+$color12=A55D50
+$color13=9E784C
+$color14=C59C87
+$color15=ECC1A9
