--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -79,12 +79,12 @@ saturation = 35
 alpha = 100
 
 [templates]
-hyprland = { template = 'templates/hyprland.conf', target = '~/.config/hypr/colors.conf' }
+hyprland = { template = 'templates/hyprland.conf', target = '~/.config/hypr/colors.conf', new_engine = true }
 waybar = { template = 'templates/colors-waybar.css', target = '~/.config/waybar/colors-waybar.css', new_engine = true }
 zathura = { template = 'templates/zathura', target = '~/.config/zathura/zathura-color', new_engine = true }
-dunst = { template = 'template/dunstrc', target = '~/.config/dunst/dunstrc', new_engine = true }
-kitty = { template = 'template/kitty.conf', target = '~/.config/kitty/current-theme.conf' }
-wofi = { template = 'template/colors-waybar.css', target = '~/.config/wofi/colors.css' }
+dunst = { template = 'templates/dunstrc', target = '~/.config/dunst/dunstrc', new_engine = true }
+kitty = { template = 'templates/kitty.conf', target = '~/.config/kitty/current-theme.conf', new_engine = true}
+wofi = { template = 'templates/colors-waybar.css', target = '~/.config/wofi/colors.css', new_engine = true }
 
 
 # REMINDER Variables and methods that can be used with templating:
