disabled hp webcam and fixed wofi styling

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,6 +34,7 @@ monitor =, preferred,auto,auto
 
 # STARTUP
 exec-once = bash ~/.config/scripts/hyprland-plugin-script.sh
+exec-once = hypridle
 exec-once = wbg $wallpaper
 exec-once = waybar
 exec-once = iio-hyprland
@@ -141,6 +142,7 @@ windowrule = float,     ^(wofi)$
 windowrule = center,    ^(wofi)$
 windowrule = noanim,    ^(wofi)$
 windowrule = noborder,  ^(wofi)$
+windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
 windowrule = float,                ^(org.telegram.desktop)$
 windowrule = center,               ^(org.telegram.desktop)$
