back to foot term

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ source = ./colors.conf
 # GLOBAL VARIABLES
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
-$term = kitty
+$term = footclient
 $filebrowser = thunar
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
@@ -34,6 +34,7 @@ monitor =, preferred,auto,auto
 
 # STARTUP
 exec-once = bash ~/.config/scripts/hyprland-plugin-script.sh
+exec-once = foot --server
 exec-once = hypridle
 exec-once = wbg $wallpaper
 exec-once = waybar
@@ -113,7 +114,7 @@ misc {
     disable_hyprland_logo = true
     # force_hypr_chan = true
     # enable_swallow = false
-    # swallow_regex = ^(kitty)$
+    # swallow_regex = ^(foot)$
     vfr = true
 }
 
@@ -130,7 +131,7 @@ general {
 # WINDOW RULES
 
 $spd_opacity = 0.9
-windowrule = opacity $spd_opacity, ^(kitty)$
+windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
