--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,6 +8,7 @@
 # title=foot
 # locked-title=no
 
+include=~/.config/foot/colors.ini
 font=FiraCode Nerd Font Mono Med:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
