--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -83,8 +83,9 @@ hyprland = { template = 'templates/hyprland.conf', target = '~/.config/hypr/colo
 waybar = { template = 'templates/colors-waybar.css', target = '~/.config/waybar/colors-waybar.css', new_engine = true }
 zathura = { template = 'templates/zathura', target = '~/.config/zathura/zathura-color', new_engine = true }
 dunst = { template = 'templates/dunstrc', target = '~/.config/dunst/dunstrc', new_engine = true }
-kitty = { template = 'templates/kitty.conf', target = '~/.config/kitty/current-theme.conf', new_engine = true}
+foot = { template = 'templates/foot.ini', target = '~/.config/foot/colors.ini', new_engine = true}
 wofi = { template = 'templates/colors-waybar.css', target = '~/.config/wofi/colors.css', new_engine = true }
+# kitty = { template = 'templates/kitty.conf', target = '~/.config/kitty/current-theme.conf', new_engine = true}
 
 
 # REMINDER Variables and methods that can be used with templating:
