zsh now aligns to colorscheme, but must beautify

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -50,7 +50,7 @@ font=FiraCode Nerd Font Mono Med:size=12
 # indicator-format=
 
 [url]
-# launch=xdg-open ${url}
+launch=gio launch ${url}
 # label-letters=sadfjklewcmpgh
 # osc8-underline=url-mode
 # protocols=http, https, ftp, ftps, file, gemini, gopher
@@ -66,49 +66,6 @@ font=FiraCode Nerd Font Mono Med:size=12
 [mouse]
 # hide-when-typing=no
 # alternate-scroll-mode=yes
-
-[colors]
-alpha=0.95
-background=03020C #03020C
-foreground=7bc8e6 #7bc8e6
-
-# Colors
-regular0=03020C # #03020C # black
-regular1=CD1432 # #CD1432 # red
-regular2=9A0763 # #9A0763 # green
-regular3=2D29A7 # #2D29A7 # yellow
-regular4=0A6298 # #0A6298 # blue
-regular5=BF17A4 # #BF17A4 # magent
-regular6=2198C4 # #2198C4 # cyan
-regular7=7bc8e6 # #7bc8e6 # white
-
-bright0=568ca1  # #568ca1 # bright black
-bright1=CD1432  # #CD1432 # bright red
-bright2=9A0763 # #9A0763 # bright green
-bright3=2D29A7 # #2D29A7 # bright yellow
-bright4=0A6298 # #0A6298 # bright blue
-bright5=BF17A4 # #BF17A4 # bright magent
-bright6=2198C4 # #2198C4 # bright cyan
-bright7=7bc8e6 # #7bc8e6 # bright white
-
-## dimmed colors (see foot.ini(5) man page)
-# dim0=<not set>
-# ...
-# dim7=<not-set>
-
-## The remaining 256-color palette
-# 16 = <256-color palette #16>
-# ...
-# 255 = <256-color palette #255>
-
-## Misc colors
-# selection-foreground=<inverse foreground/background>
-# selection-background=<inverse foreground/background>
-# jump-labels=<regular0> <regular3>          # black-on-yellow
-# scrollback-indicator=<regular0> <bright4>  # black-on-bright-blue
-# search-box-no-match=<regular0> <regular1>  # black-on-red
-# search-box-match=<regular0> <regular3>     # black-on-yellow
-# urls=<regular3>
 
 [csd]
 # preferred=server
