hyprlock colors fixed

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,9 +9,9 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = $color14
-    inner_color = $foreground
-    font_color = $foreground
+    outer_color = rgb($color14)
+    inner_color = rgb($background)
+    font_color = rgb($foreground)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
@@ -36,9 +36,9 @@ label {
     monitor =
     text = Hi there, $USER
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = $foreground
+    color = rgb($foreground)
     font_size = 96
-    font_family = Noto Sans
+    font_family = Fira Code
     rotate = 0 # degrees, counter-clockwise
 
     position = 0, 160
@@ -48,8 +48,8 @@ label {
 
 background {
     monitor =
-    color = $background
     #path = $wallpaper
+    color = rgb($background)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 0 # 0 disables blurring
