changed color and remove ll quoting

--- a/.config/foot/colors.ini
+++ b/.config/foot/colors.ini
@@ -1,32 +1,32 @@
 [colors]
 # alpha=1.0
-background=080501
-foreground=F7D9C8
+background=020103
+foreground=A9A8AA
 
 ## Normal/regular colors (color palette 0-7)
-regular0=0A0602  # black
-regular1=6E4035  # red
-regular2=83623F  # green
-regular3=945B47  # yellow
-regular4=AC6153  # blue
-regular5=977249  # magenta
-regular6=A97151  # cyan
-regular7=ECC1A9  # white
+regular0=2D2B2F  # black
+regular1=322753  # red
+regular2=6B356E  # green
+regular3=3F4F83  # yellow
+regular4=6A4086  # blue
+regular5=7F3D65  # magenta
+regular6=574A9B  # cyan
+regular7=7C7B7E  # white
 
 ## Bright colors (color palette 8-15)
-bright0=A58776   # bright black
-bright1=7C483C   # bright red
-bright2=976D49   # bright green
-bright3=A2654E   # bright yellow
-bright4=A55D50   # bright blue
-bright5=9E784C   # bright magenta
-bright6=C59C87   # bright cyan
-bright7=ECC1A9   # bright white
+bright0=565658   # bright black
+bright1=402956   # bright red
+bright2=723A78   # bright green
+bright3=495D97   # bright yellow
+bright4=7C4A9B   # bright blue
+bright5=914574   # bright magenta
+bright6=6859AF   # bright cyan
+bright7=7C7B7E   # bright white
 
 
 ## Misc colors
-selection-foreground=080501
-selection-background=F7D9C8
+selection-foreground=020103
+selection-background=A9A8AA
 urls=8be9fd
 
 # vim: ft=dosini
