--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -2,24 +2,24 @@
 $wallpaper="/home/yukna/Pictures/Wallpaper/cropped-image.jpg"
 
 # Special
-$cursor=F7D9C8
-$background=080501
-$foreground=F7D9C8
+$cursor=A9A8AA
+$background=020103
+$foreground=A9A8AA
 
 # Colors
-$color0=0A0602
-$color1=6E4035
-$color2=83623F
-$color3=945B47
-$color4=AC6153
-$color5=977249
-$color6=A97151
-$color7=ECC1A9
-$color8=A58776
-$color9=7C483C
-$color10=976D49
-$color11=A2654E
-$color12=A55D50
-$color13=9E784C
-$color14=C59C87
-$color15=ECC1A9
+$color0=2D2B2F
+$color1=322753
+$color2=6B356E
+$color3=3F4F83
+$color4=6A4086
+$color5=7F3D65
+$color6=574A9B
+$color7=7C7B7E
+$color8=565658
+$color9=402956
+$color10=723A78
+$color11=495D97
+$color12=7C4A9B
+$color13=914574
+$color14=6859AF
+$color15=7C7B7E
