--- a/.local/share/applications/spotify_web.desktop
+++ b/.local/share/applications/spotify_web.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Spotify (Web)
-Exec=/usr/bin/brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://open.spotify.com
+Exec=brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://open.spotify.com
 Terminal=false
 Type=Application
 Icon=Spotify
