fixed selective kill button

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@ $brightness = ~/.config/scripts/brightness.sh
 $launcher1 = ~/.config/scripts/app_launcher.sh
 $launcher2 = ~/.config/scripts/icon_launcher.sh
 $powermenu = ~/.config/scripts/powermenu_launcher.sh
+$selective_kill = ~/.config/scripts/selective_kill.sh
 
 $printscr_savepath = ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S')
 $printscr_fullscreen = grim
@@ -253,7 +254,7 @@ submap = resize
     bind = SHIFT,   W,      bringactivetotop, 
     bind = SHIFT,   W,      submap, reset
 
-    bind =,         Q,      exec, ~/.config/scripts/selective_kill.sh
+    bind =,         Q,      exec, $selective_kill
     bind =,         Q,      submap, reset
 
     bind = SHIFT,   Q,      killactive, 
@@ -389,7 +390,7 @@ plugin {
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb($color3), 20, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb($color3), 20, 󰖭, hyprctl dispatch exec ~/.config/scripts/selective_kill.sh
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch fullscreen 1
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
     }
