some keymap and touch tweaks

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -267,7 +267,9 @@ submap = resize
 
     bind =,         Space,  togglefloating, 
     bind =,         Space,  centerwindow, 
+    bind =,         Space,  submap, reset
     bind =,         C,      centerwindow, 
+    bind =,         C,      submap, reset
 
     bind =,         Tab,    togglesplit, 
     bind =,         h,      movefocus, l
@@ -396,7 +398,7 @@ plugin {
     }
     touch_gestures {
         sensitivity = 5.0
-        long_press_delay = 500
+        long_press_delay = 1000
         # must be >= 3
         workspace_swipe_fingers = 4
         experimental {
