--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@
 ##################
 
 source = ./colors.conf
+exec-once = hyprlock --immediate
 # GLOBAL VARIABLES
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
