fixed desktop chrome apps to not launch multiple instances

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ exec-once = lxqt-policykit-agent
 exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
 exec-once = pulseaudio -D
-exec-once = blueman-tray
+exec-once = blueman-applet
 exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
