--- a/.local/share/applications/spotify.desktop
+++ b/.local/share/applications/spotify.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Spotify
-Exec=/bin/spotify --enable-features=WaylandWindowDecorations --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime %U
+Exec=#bash -c '$HOME/.config/scripts/launch_one_instance.sh spotify-client "spotify --enable-features=WaylandWindowDecorations --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime %U"'
 Terminal=false
 Type=Application
 Icon=spotify
