--- a/.local/share/applications/todo.desktop
+++ b/.local/share/applications/todo.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=todo (Microsoft)
-Exec=brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://to-do.live.com/tasks/today
+Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh brave-to-do.live.com__tasks_today-Default "brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://to-do.live.com/tasks/today"'
 Terminal=false
 Type=Application
 Icon=to-do-app
