--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -89,7 +89,10 @@ decoration {
     shadow_render_power = 2
     col.shadow = rgba($color13ee)
     active_opacity = 1.0
-    inactive_opacity = 0.875
+    inactive_opacity = 0.9
+    dim_inactive = true
+    dim_strength = 0.3
+    dim_around = 0.4
 }
 
 animations {
@@ -137,17 +140,20 @@ windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
+windowrule = dimaround, org.kde.polkit-kde-authentication-agent-1
 windowrule = center, org.kde.polkit-kde-authentication-agent-1
 
 windowrule = pseudo, fcitx
 
 windowrule = float,     ^(wofi)$
+windowrule = dimaround,     ^(wofi)$
 windowrule = center,    ^(wofi)$
 windowrule = noanim,    ^(wofi)$
 windowrule = noborder,  ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
 windowrule = float,                ^(org.telegram.desktop)$
+windowrule = dimaround,                ^(org.telegram.desktop)$
 windowrule = center,               ^(org.telegram.desktop)$
 windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
 
@@ -155,36 +161,43 @@ windowrule = float,                ^(brave-calendar.google.com__calendar_u_1_r-D
 windowrule = size 70% 70%,         ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = center,               ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = dimaround,               ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 
 windowrule = float,                ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = size 70% 70%,         ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = center,               ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = dimaround,               ^(brave-mail.google.com__mail_u_.-Default)$
 
 windowrule = float,                ^(ncspot)$
 windowrule = size 70% 70%,         ^(ncspot)$
 windowrule = opacity $spd_opacity, ^(ncspot)$
 windowrule = center,               ^(ncspot)$
+windowrule = dimaround,               ^(ncspot)$
 
 windowrule = float,                ^(brave-to-do.live.com.+)$
 windowrule = size 70% 70%,         ^(brave-to-do.live.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-to-do.live.com.+)$
 windowrule = center,               ^(brave-to-do.live.com.+)$
+windowrule = dimaround,               ^(brave-to-do.live.com.+)$
 
 windowrule = float,                ^(brave-web.whatsapp.com.+)$
 windowrule = size 70% 70%,         ^(brave-web.whatsapp.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
 windowrule = center,               ^(brave-web.whatsapp.com.+)$
+windowrule = dimaround,               ^(brave-web.whatsapp.com.+)$
 
 windowrule = float,                ^(brave-keep.google.com.+)$
 windowrule = size 70% 70%,         ^(brave-keep.google.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-keep.google.com.+)$
 windowrule = center,               ^(brave-keep.google.com.+)$
+windowrule = dimaround,               ^(brave-keep.google.com.+)$
 
 windowrule = float,                ^(brave-open.spotify.com.+)$
 windowrule = size 70% 70%,         ^(brave-open.spotify.com.+)$
 windowrule = opacity $spd_opacity, ^(brave-open.spotify.com.+)$
 windowrule = center,               ^(brave-open.spotify.com.+)$
+windowrule = dimaround,               ^(brave-open.spotify.com.+)$
 
 
 # KEY BINDINGS
