switched to gnome polkit

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ exec-once = hyprlock --immediate
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = footclient
-$filebrowser = thunar
+$filebrowser = nemo
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
@@ -141,14 +141,10 @@ $spd_opacity = 0.9
 windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
-windowrule = float, org.kde.polkit-kde-authentication-agent-1
-windowrule = dimaround, org.kde.polkit-kde-authentication-agent-1
-windowrule = center, org.kde.polkit-kde-authentication-agent-1
-
 windowrule = pseudo, fcitx
 
 windowrule = float,     ^(wofi)$
-windowrule = dimaround,     ^(wofi)$
+windowrule = dimaround, ^(wofi)$
 windowrule = center,    ^(wofi)$
 windowrule = noanim,    ^(wofi)$
 windowrule = noborder,  ^(wofi)$
@@ -214,7 +210,7 @@ bind = $mainMod SHIFT, T,      exec,             ~/.config/scripts/animations.sh
 bind = $mainMod SHIFT, O,      pseudo, 
 bind = $mainMod,       V,      exec,             $menu_paste
 bind = $mainMod,       Return, exec,             $term
-bind = $mainMod,       E,      exec,             thunar
+bind = $mainMod,       E,      exec,             $filebrowser
 bind = $mainMod,       B,      exec,             $webbrowser
 bind = $mainMod,       N,      exec,             swaync-client -t -sw
 bind = $mainMod,       Escape, exec,             $powermenu
