swayimg pops up

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -143,23 +143,29 @@ windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = pseudo, fcitx
 
-windowrule = float,     ^(wofi)$
-windowrule = dimaround, ^(wofi)$
-windowrule = center,    ^(wofi)$
-windowrule = noanim,    ^(wofi)$
-windowrule = noborder,  ^(wofi)$
+windowrule = float,                 ^(wofi)$
+windowrule = dimaround,             ^(wofi)$
+windowrule = center,                ^(wofi)$
+windowrule = noanim,                ^(wofi)$
+windowrule = noborder,              ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
 windowrule = float,                ^(org.telegram.desktop)$
-windowrule = dimaround,                ^(org.telegram.desktop)$
+windowrule = dimaround,            ^(org.telegram.desktop)$
 windowrule = center,               ^(org.telegram.desktop)$
 windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
+
+windowrule = float,                ^(swayimg_)
+windowrule = size 50% 50%,         ^(swayimg_)
+windowrule = dimaround,            ^(swayimg_)
+windowrule = center,               ^(swayimg_)
+windowrule = opacity $spd_opacity, ^(swayimg_)
 
 windowrule = float,                ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = size 70% 70%,         ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = center,               ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = dimaround,               ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = dimaround,            ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 
 windowrule = float,                ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = size 70% 70%,         ^(brave-mail.google.com__mail_u_.-Default)$
